# Back-End/Api/src/main/java/br/com/luizgustavosgobi/phonetracker/api/services/OccurrenceService.java
@@ -8,13 +8,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -22,38 +17,7 @@ import java.util.UUID;
 
 @Service
 public class OccurrenceService {
-    private final String DEFAULT_PROOFS_PATH = "src/main/resources/proofs/";
-
     @Autowired private OccurrenceRepository occurrenceRepository;
-
-    public String saveOccurrenceFile(MultipartFile proof) {
-        String originalFileName = proof.getOriginalFilename();
-        if (originalFileName == null)
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Proof file name is null");
-
-        String fileExtension = originalFileName.substring(originalFileName.lastIndexOf("."));
-        String newFileName = UUID.randomUUID() + fileExtension;
-
-        try {
-            Path dir = Paths.get(DEFAULT_PROOFS_PATH);
-            if (!Files.exists(dir))
-                Files.createDirectories(dir);
-
-            proof.transferTo(dir.resolve(newFileName));
-        } catch (IOException e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error trying to save the proof file", e);
-        }
-
-        return newFileName;
-    }
-
-    public void deleteOccurrenceFile(String fileName){
-        try {
-            Files.deleteIfExists(Paths.get(DEFAULT_PROOFS_PATH + fileName));
-        } catch (IOException e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error trying to delete the file", e);
-        }
-    }
 
     public Specification<OccurrenceModel> buildQuerySpecification(OccurrenceFilterDto filters) {
         if (filters.getStartDate() != null && filters.getEndDate() != null && filters.getStartDate().isAfter(filters.getEndDate()))
